feat: file upload

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-	<h1>Index</h1>
-	<p>William Shakespeare</p>
+	<form action="fileupload" method="post" enctype="multipart/form-data">
+		<input type="file" name="filetoupload"><br>
+		<input type="submit">
+	</form>
 </body>
 </html>
